--- a/styles.css
+++ b/styles.css
@@ -1,206 +1,76 @@
-* {
+html {
     box-sizing: border-box;
 }
 
-body {
-    background-color: #c9d2fc;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
-.cat-head {
-    width: 205px;
+#piano {
+    background-color: #00471b;
+    width: 992px;
+    height:  290px;
+    margin: 80px auto;
+    padding: 90px 20px 0 20px;
+    position: relative;
+    border-radius: 10px;
+}
+
+.keys {
+    background-color: #040404;
+    width: 949px;
     height: 180px;
-    border: 1px solid #000;
-    border-radius: 46%;
-    background: linear-gradient(#5e5e5e 85%, #45454f 100%);
+    padding-left: 2px;
+    overflow: hidden;
+}
+
+.key {
+    background-color: #ffffff;
+    position: relative;
+    width: 41px;
+    height: 175px;
+    margin: 2px;
+    float: left;
+    border-radius: 0 0 3px 3px;
+}
+
+.key.black--key::after {
+    background-color: #1d1e22;
+    content: "";
     position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    margin: auto;
+    left: -18px;
+    width: 32px;
+    height: 100px;
+    border-radius: 0 0 3px 3px;
 }
 
-.cat-left-ear {
-    border-left: 35px solid transparent;
-    border-right: 35px solid transparent;
-    border-bottom: 70px solid #5e5e5e;
+.logo {
+    width: 200px;
     position: absolute;
-    top: -26px;
-    left: -31px;
-    border-top-left-radius: 90px;
-    border-top-right-radius: 10px;
-    transform: rotate(-45deg);
-    z-index: 1;
+    top:  23px;
 }
 
-.cat-right-ear {
-    border-left: 35px solid transparent;
-    border-right: 35px solid transparent;
-    border-bottom: 70px solid #5e5e5e;
-    position: absolute;
-    top: -26px;
-    left: 163px;
-    transform: rotate(45deg);
-    border-top-left-radius: 90px;
-    border-top-right-radius: 10px;
-    z-index: 1;
+@media (max-width: 768px) {
+    #piano {
+        width: 358px;
+    }
+
+    .keys {
+        width: 318px;
+    }
+
+    .logo {
+        width: 150px;
+    }
 }
 
-.cat-left-inner-ear {
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid #3b3b4f;
-    position: absolute;
-    top: 22px;
-    left: -20px;
-    border-bottom-right-radius: 40%;
-    border-bottom-left-radius: 40%;
-    border-top-left-radius: 90px;
-    border-top-right-radius: 10px;
-}
-
-.cat-right-inner-ear {
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid #3b3b4f;
-    position: absolute;
-    top: 22px;
-    left: -20px;
-    border-bottom-right-radius: 40%;
-    border-bottom-left-radius: 40%;
-    border-top-left-radius: 90px;
-    border-top-right-radius: 10px;
-}
-
-.cat-left-eye {
-    width: 30px;
-    height: 40px;
-    background-color: #000;
-    position: absolute;
-    top: 54px;
-    left: 39px;
-    border-radius: 60%;
-    transform: rotate(25deg)
-}
-
-.cat-right-eye {
-    width: 30px;
-    height: 40px;
-    background-color: #000;
-    position: absolute;
-    top: 54px;
-    left: 134px;
-    border-radius: 60%;
-    transform: rotate(-25deg);   
-}
-
-.cat-left-inner-eye {
-    width: 10px;
-    height: 20px;
-    background-color: #fff;
-    position: absolute;
-    top: 8px;
-    left: 2px;
-    border-radius: 60%;
-    transform: rotate(10deg);
-}
-
-.cat-right-inner-eye {
-    width: 10px;
-    height: 20px;
-    background-color: #fff;
-    position: absolute;
-    top: 8px;
-    left: 18px;
-    border-radius: 60%;
-    transform: rotate(-5deg);
-}
-
-.cat-nose {
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 20px solid #442c2c;
-    position: absolute;
-    top: 108px;
-    left: 85px;
-    border-radius: 50%;
-    transform: rotate(180deg);
-}
-
-.cat-mouth div {
-    width: 30px;
-    height: 50px;
-    border: 2px solid #000;
-    border-color: black transparent transparent transparent;
-    border-radius: 190%/190px 150px 0 0;
-
-}
-
-.cat-mouth-line-left {
-    position: absolute;
-    top: 88px;
-    left: 74px;
-    transform: rotate(170deg);
-}
-
-.cat-mouth-line-right {
-    position: absolute;
-    top: 88px;
-    left: 91px;
-    transform: rotate(165deg);
-}
-
-.cat-whiskers-left div {
-    width: 40px;
-    height: 1px;
-    background-color: #000;
-}
-
-.cat-whiskers-right div {
-    width: 40px;
-    height: 1px;
-    background-color: #000;
-}
-
-.cat-whisker-left-top {
-    position: absolute;
-    top: 120px;
-    left: 52px;
-    transform: rotate(10deg);
-}
-
-.cat-whisker-left-middle {
-    position: absolute;
-    top: 127px;
-    left: 52px;
-    transform: rotate(3deg);
-}
-
-.cat-whisker-left-bottom {
-    position: absolute;
-    top: 134px;
-    left: 52px;
-    transform: rotate(-3deg);
-}
-
-.cat-whisker-right-top {
-    position: absolute;
-    top: 120px;
-    left: 109px;
-    transform: rotate(-10deg);
-}
-
-.cat-whisker-right-middle {
-    position: absolute;
-    top: 127px;
-    left: 109px;
-    transform: rotate(-3deg);
-}
-
-
-.cat-whisker-right-bottom {
-    position: absolute;
-    top: 134px;
-    left: 109px;
-    transform: rotate(3deg)
-}
+@media (max-width: 1199px) and (min-width: 769px) {
+    #piano {
+      width: 675px;
+    }
+    .keys {
+      width: 633px;
+    }
+  }
