--- a/ProductLanding/styles.css
+++ b/ProductLanding/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #6c63ff;
+  --primary-color: #6d0303;
   --secondary-color: #f1f1f1;
   --text-color: #333;
   --card-bg: #fff;
@@ -35,7 +35,12 @@ header {
 }
 
 header img {
-  width: 60px;
+  width: 50px;
+  height: auto;
+}
+
+#header-img {
+  width: 100px;
   height: auto;
 }
 
@@ -54,7 +59,7 @@ nav a:hover {
 #intro {
   text-align: center;
   padding: 4rem 2rem;
-  background: linear-gradient(to right, #6c63ff, #a996ff);
+  background: linear-gradient(to right, #250003, #6a0000);
   color: #fff;
 }
 
